--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-404
+<!doctype html><html lang=en><head><meta http-equiv="refresh" content="0; URL='https://shekohex.github.io/#/notfound'" /><title>404</title></head><body></body></html>
