--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><meta property=og:type content=website><meta name=twitter:card content=summary_large_image><meta name=twitter:site content=@shekohex><meta name=twitter:title content="About | Shady Khalifa"><meta name=twitter:description content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology using Javascript/Typescript and NodeJS."><meta name=twitter:image content=https://shekohex.github.io/static/favicons/android-chrome-512x512.png><meta name=twitter:image:alt content="See more about Shady Khalifa"><meta property=og:title content="About | Shady Khalifa"><meta property=og:description content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology using Javascript/Typescript and NodeJS."><meta property=og:url content=https://shekohex.github.io/ ><meta property=og:image content=https://shekohex.github.io/static/favicons/android-chrome-512x512.png><link rel=apple-touch-icon sizes=180x180 href=/static/favicons/apple-touch-icon.png><link rel=icon type=image/png sizes=32x32 href=/static/favicons/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/static/favicons/favicon-16x16.png><link rel=manifest href=/static/favicons/manifest.json><link rel=mask-icon href=/static/favicons/safari-pinned-tab.svg color=#5bbad5><link rel="shortcut icon" href=/static/favicons/favicon.ico><meta name=apple-mobile-web-app-title content="Shady Khalifa"><meta name=application-name content="Shady Khalifa"><meta name=msapplication-config content=/static/favicons/browserconfig.xml><meta name=theme-color content=#ca3d42><title>About | Shady Khalifa</title><link href=static/css/app.131aee9503a8854dbcc819ad912eaff8.css rel=stylesheet></head><body class=phl><div id=app></div><script type=text/javascript src=static/js/manifest.8590408da1c77f6f88b7.js></script><script type=text/javascript src=static/js/vendor.036b773ba073d3608a35.js></script><script type=text/javascript src=static/js/app.70af432b3452e5d1e4a9.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@shekohex" />
+    <meta name="twitter:title" content="About | Shady Khalifa" />
+    <meta
+      name="twitter:description"
+      content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology..."
+    />
+    <meta name=twitter:image
+    content=https://shadykhalifa.me/static/favicons/android-chrome-512x512.png>
+    <meta name="twitter:image:alt" content="See more about Shady Khalifa" />
+    <meta property="og:title" content="About | Shady Khalifa" />
+    <meta
+      property="og:description"
+      content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology..."
+    />
+    <meta property=og:url content=https://shadykhalifa.me/> <meta
+    property=og:image content=/static/favicons/android-chrome-512x512.png> <link
+    rel=apple-touch-icon sizes=180x180
+    href=/static/favicons/apple-touch-icon.png> <link rel=icon type=image/png
+    sizes=32x32 href=/static/favicons/favicon-32x32.png> <link rel=icon
+    type=image/png sizes=16x16 href=/static/favicons/favicon-16x16.png> <link
+    rel=manifest href=/static/favicons/manifest.json> <link rel=mask-icon
+    href=/static/favicons/safari-pinned-tab.svg color=#5bbad5> <link
+    rel="shortcut icon" href=/static/favicons/favicon.ico>
+    <meta name="apple-mobile-web-app-title" content="About | Shady Khalifa" />
+    <meta name="application-name" content="Shady Khalifa" />
+    <meta name=msapplication-config content=/static/favicons/browserconfig.xml>
+    <meta name="theme-color" content="#ca3d42" />
+    <title>About | Shady Khalifa</title>
+    <link rel="stylesheet" href="/static/css/style.css" />
+  </head>
+
+  <body class="flex items-center justify-center h-screen bg-gray-100">
+    <div>
+      <h1 class="font-bold">We Will back soon ...</h1>
+    </div>
+  </body>
+</html>
