--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       name="Description"
       content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology..."
     />
+    <meta name="keywords" content="shekohex,Shady Khalifa" />
+    <meta name="author" content="Shady Khalifa" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@shekohex" />
@@ -16,23 +18,20 @@
       name="twitter:description"
       content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology..."
     />
-    <meta name=twitter:image
-    content=https://shadykhalifa.me/static/favicons/android-chrome-512x512.png>
+    <meta name=twitter:image content=https://shadykhalifa.me/static/favicons/android-chrome-512x512.png>
     <meta name="twitter:image:alt" content="See more about Shady Khalifa" />
     <meta property="og:title" content="About | Shady Khalifa" />
     <meta
       property="og:description"
       content="Shady Khalifa is a Senior Web Developer, with experience in Back-end Technology..."
     />
-    <meta property=og:url content=https://shadykhalifa.me/> <meta
-    property=og:image content=/static/favicons/android-chrome-512x512.png> <link
-    rel=apple-touch-icon sizes=180x180
-    href=/static/favicons/apple-touch-icon.png> <link rel=icon type=image/png
-    sizes=32x32 href=/static/favicons/favicon-32x32.png> <link rel=icon
-    type=image/png sizes=16x16 href=/static/favicons/favicon-16x16.png> <link
-    rel=manifest href=/static/favicons/manifest.json> <link rel=mask-icon
-    href=/static/favicons/safari-pinned-tab.svg color=#5bbad5> <link
-    rel="shortcut icon" href=/static/favicons/favicon.ico>
+    <meta property=og:url content=https://shadykhalifa.me/> <meta property=og:image
+    content=/static/favicons/android-chrome-512x512.png> <link rel=apple-touch-icon sizes=180x180
+    href=/static/favicons/apple-touch-icon.png> <link rel=icon type=image/png sizes=32x32
+    href=/static/favicons/favicon-32x32.png> <link rel=icon type=image/png sizes=16x16
+    href=/static/favicons/favicon-16x16.png> <link rel=manifest href=/static/favicons/manifest.json> <link rel=mask-icon
+    href=/static/favicons/safari-pinned-tab.svg color=#5bbad5> <link rel="shortcut icon"
+    href=/static/favicons/favicon.ico>
     <meta name="apple-mobile-web-app-title" content="About | Shady Khalifa" />
     <meta name="application-name" content="Shady Khalifa" />
     <meta name=msapplication-config content=/static/favicons/browserconfig.xml>
@@ -41,9 +40,57 @@
     <link rel="stylesheet" href="/static/css/style.css" />
   </head>
 
-  <body class="flex items-center justify-center h-screen bg-gray-100">
-    <div>
-      <h1 class="font-bold">We Will back soon ...</h1>
+  <body class="leading-normal tracking-wider bg-cover bg-primary">
+    <div class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto my-40">
+      <div class="lg:w-full md:w-auto sm:w-4/5 lg:mx-0 sm:m-10 md:m-5">
+        <h1 class="text-5xl font-bold font-display underline text-tertiary">Hi, I’m Shady Khalifa</h1>
+        <small class="text-sm font-light font-body italic opacity-50 text-tertiary"
+          >Someone Who wanna change this world to a better place</small
+        >
+      </div>
+      <div class="lg:h-40 md:w-auto sm:w-4/5 lg:mx-0 sm:m-10 md:m-5 flex flex-col justify-around">
+        <h3 class="font-body font-medium text-tertiary">
+          I’m a dual engineer (electrical and software), with experience in back-end technologies.
+        </h3>
+        <h3 class="font-body font-medium text-tertiary">
+          I also enjoy building open source projects, I spend my time
+          <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://twitter.com/shekohex"
+            >tweeting</a
+          >,
+          <a
+            rel="noopener noreferrer"
+            target="_blank"
+            class="underline text-link"
+            href="https://stackoverflow.com/users/6686164/shady-khalifa?tab=profile"
+            >answering questions</a
+          >
+          and
+          <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://github.com/shekohex"
+            >writing code</a
+          >.
+        </h3>
+        <h3 class="font-body font-medium text-tertiary">
+          For more information about me you can take a look at
+          <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://goo.gl/UFL21F"
+            >my résumé</a
+          >.
+        </h3>
+      </div>
+      <div class="lg:mx-0 sm:m-10 md:m-5">
+        <a
+          href="mailto:shekohex@gmail.com"
+          rel="noopener noreferrer"
+          target="_blank"
+          class="bg-secondary shadow-lg font-body font-medium text-tertiary pt-6 pb-6 pr-8 pl-8 rounded-full"
+        >
+          Contact Me
+        </a>
+      </div>
+      <div class="lg:mx-0 sm:m-10 md:m-5">
+        <small class="text-xs font-light font-body italic opacity-50 text-tertiary"
+          >Pssst.. I’m available for hire :)</small
+        >
+      </div>
     </div>
   </body>
 </html>
