fix responsive issue

--- a/index.html
+++ b/index.html
@@ -41,14 +41,20 @@
   </head>
 
   <body class="leading-normal tracking-wider bg-cover bg-primary">
-    <div class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto my-40">
-      <div class="lg:w-full md:w-auto sm:w-4/5 lg:mx-0 sm:m-10 md:m-5">
-        <h1 class="text-5xl font-bold font-display underline text-tertiary">Hi, I’m Shady Khalifa</h1>
+    <div
+      class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto lg:my-40 md:my-32 sm:my-24 my-20"
+    >
+      <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
+        <h1 class="lg:text-5xl md:text-4xl sm:text-3xl text-2xl font-bold font-display underline text-tertiary">
+          Hi, I’m Shady Khalifa
+        </h1>
         <small class="text-sm font-light font-body italic opacity-50 text-tertiary"
           >Someone Who wanna change this world to a better place</small
         >
       </div>
-      <div class="lg:h-40 md:w-auto sm:w-4/5 lg:mx-0 sm:m-10 md:m-5 flex flex-col justify-around">
+      <div
+        class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6 flex flex-col justify-around"
+      >
         <h3 class="font-body font-medium text-tertiary">
           I’m a dual engineer (electrical and software), with experience in back-end technologies.
         </h3>
@@ -76,7 +82,7 @@
           >.
         </h3>
       </div>
-      <div class="lg:mx-0 sm:m-10 md:m-5">
+      <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
         <a
           href="mailto:shekohex@gmail.com"
           rel="noopener noreferrer"
@@ -86,7 +92,7 @@
           Contact Me
         </a>
       </div>
-      <div class="lg:mx-0 sm:m-10 md:m-5">
+      <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
         <small class="text-xs font-light font-body italic opacity-50 text-tertiary"
           >Pssst.. I’m available for hire :)</small
         >
