change the font size

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto lg:my-40 md:my-32 sm:my-24 my-20"
     >
       <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
-        <h1 class="lg:text-5xl md:text-4xl sm:text-3xl text-2xl font-bold font-display underline text-tertiary">
+        <h1 class="lg:text-5xl md:text-4xl text-3xl font-bold font-display underline text-tertiary">
           Hi, I’m Shady Khalifa
         </h1>
         <small class="text-sm font-light font-body italic opacity-50 text-tertiary"
