--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
     <meta name="theme-color" content="#ca3d42" />
     <title>About | Shady Khalifa</title>
     <link rel="stylesheet" href="/static/css/style.css" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91356914-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-91356914-3");
+    </script>
   </head>
 
   <body class="leading-normal tracking-wider bg-cover bg-primary">
