Update my information

--- a/index.html
+++ b/index.html
@@ -1,100 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Description"
+      content="Shady Khalifa is a Software Engineer, with experience in Blockchain Technology..."
+    />
+    <meta name="keywords" content="shekohex,Shady Khalifa" />
+    <meta name="author" content="Shady Khalifa" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@shekohex" />
+    <meta name="twitter:title" content="About | Shady Khalifa" />
+    <meta
+      name="twitter:description"
+      content="Shady Khalifa is a Senior Software Engineer, with experience in Blockchain Technology..."
+    />
+    <meta name=twitter:image content=https://shadykhalifa.me/static/favicons/android-chrome-512x512.png>
+    <meta name="twitter:image:alt" content="See more about Shady Khalifa" />
+    <meta property="og:title" content="About | Shady Khalifa" />
+    <meta
+      property="og:description"
+      content="Shady Khalifa is a Senior Software Engineer, with experience in Blockchain Technology..."
+    />
+    <meta property=og:url content=https://shadykhalifa.me /> <meta property=og:image
+    content=/static/favicons/android-chrome-512x512.png> <link rel=apple-touch-icon sizes=180x180
+    href=/static/favicons/apple-touch-icon.png> <link rel=icon type=image/png sizes=32x32
+    href=/static/favicons/favicon-32x32.png> <link rel=icon type=image/png sizes=16x16
+    href=/static/favicons/favicon-16x16.png> <link rel=manifest href=/static/favicons/manifest.json> <link rel=mask-icon
+    href=/static/favicons/safari-pinned-tab.svg color=#222831> <link rel="shortcut icon"
+    href=/static/favicons/favicon.ico>
+    <meta name="apple-mobile-web-app-title" content="About | Shady Khalifa" />
+    <meta name="application-name" content="Shady Khalifa" />
+    <meta name=msapplication-config content=/static/favicons/browserconfig.xml>
+    <meta name="theme-color" content="#222831" />
+    <title>About | Shady Khalifa</title>
+    <link rel="stylesheet" href="/static/css/style.css" />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="Description"
-    content="Shady Khalifa is a Software Engineer, with experience in Blockchain Technology..." />
-  <meta name="keywords" content="shekohex,Shady Khalifa" />
-  <meta name="author" content="Shady Khalifa" />
-  <meta property="og:type" content="website" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@shekohex" />
-  <meta name="twitter:title" content="About | Shady Khalifa" />
-  <meta name="twitter:description"
-    content="Shady Khalifa is a Senior Software Engineer, with experience in Blockchain Technology..." />
-  <meta name=twitter:image content=https://shadykhalifa.me/static/favicons/android-chrome-512x512.png>
-  <meta name="twitter:image:alt" content="See more about Shady Khalifa" />
-  <meta property="og:title" content="About | Shady Khalifa" />
-  <meta property="og:description"
-    content="Shady Khalifa is a Senior Software Engineer, with experience in Blockchain Technology..." />
-  <meta property=og:url content=https://shadykhalifa.me />
-  <meta property=og:image content=/static/favicons/android-chrome-512x512.png>
-  <link rel=apple-touch-icon sizes=180x180 href=/static/favicons/apple-touch-icon.png>
-  <link rel=icon type=image/png sizes=32x32 href=/static/favicons/favicon-32x32.png>
-  <link rel=icon type=image/png sizes=16x16 href=/static/favicons/favicon-16x16.png>
-  <link rel=manifest href=/static/favicons/manifest.json>
-  <link rel=mask-icon href=/static/favicons/safari-pinned-tab.svg color=#222831>
-  <link rel="shortcut icon" href=/static/favicons/favicon.ico>
-  <meta name="apple-mobile-web-app-title" content="About | Shady Khalifa" />
-  <meta name="application-name" content="Shady Khalifa" />
-  <meta name=msapplication-config content=/static/favicons/browserconfig.xml>
-  <meta name="theme-color" content="#222831" />
-  <title>About | Shady Khalifa</title>
-  <link rel="stylesheet" href="/static/css/style.css" />
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91356914-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
-
-    gtag("config", "UA-91356914-3");
-  </script>
-</head>
-
-<body class="leading-normal tracking-wider bg-cover bg-primary">
-  <div
-    class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto lg:my-40 md:my-32 sm:my-24 my-20">
-    <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
-      <h1 class="lg:text-5xl md:text-4xl text-3xl font-bold font-display underline text-tertiary">
-        Hi, I’m Shady Khalifa
-      </h1>
-      <small class="text-sm font-light font-body italic opacity-75 text-tertiary">Someone Who wanna change this world
-        into better place</small>
-    </div>
+  <body class="leading-normal tracking-wider bg-cover bg-primary">
     <div
-      class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6 flex flex-col justify-around">
-      <h3 class="font-body font-medium text-tertiary">
-        I’m a dual engineer (electrical and software), with experience in blockchain technologies.
-      </h3>
-      <h3 class="font-body font-medium text-tertiary">
-        I also enjoy building open source projects, I spend my time
-        <a rel="noopener noreferrer" target="_blank" class="underline text-link"
-          href="https://twitter.com/shekohex">tweeting</a>,
-        <a rel="noopener noreferrer" target="_blank" class="underline text-link"
-          href="https://stackoverflow.com/users/6686164/shady-khalifa?tab=profile">answering questions</a>
-        and
-        <a rel="noopener noreferrer" target="_blank" class="underline text-link"
-          href="https://github.com/shekohex">writing code</a>.
-      </h3>
-      <h3 class="font-body font-medium text-tertiary">
-        For more information about me you can take a look at
-        <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://goo.gl/UFL21F">my
-          résumé</a>.
-      </h3>
-      <h3 class="font-body font-light text-tertiary italic">
-        You can almost find me anywhere on internet by <code>shekohex</code> as a username/handle.
-      </h3>
-    </div>
-    <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
-      <a href="mailto:shekohex@gmail.com" rel="noopener noreferrer" target="_blank"
-        class="bg-secondary shadow-lg font-body font-medium text-tertiary pt-6 pb-6 pr-8 pl-8 rounded-full">
-        Email Me :)
-      </a>
-    </div>
-    <!--
+      class="lg:max-w-4xl md:max-w-3xl flex flex-col flex-auto lg:mt-10 md:mt-10 h-auto lg:h-screen mx-auto lg:my-40 md:my-32 sm:my-24 my-20"
+    >
+      <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
+        <h1 class="lg:text-5xl md:text-4xl text-3xl font-bold font-display underline text-tertiary">
+          Hi, I’m Shady Khalifa
+        </h1>
+        <small class="text-sm font-light font-body italic opacity-75 text-tertiary"
+          >Someone Who wanna change this world into better place</small
+        >
+      </div>
+      <div
+        class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6 flex flex-col justify-around"
+      >
+        <h3 class="font-body font-medium text-tertiary">
+          I’m a dual engineer (electrical and software), with experience in blockchain technologies.
+        </h3>
+        <h3 class="font-body font-medium text-tertiary">
+          I also enjoy building open source projects, I spend my time
+          <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://twitter.com/shekohex"
+            >tweeting</a
+          >,
+          <a
+            rel="noopener noreferrer"
+            target="_blank"
+            class="underline text-link"
+            href="https://stackoverflow.com/users/6686164/shady-khalifa?tab=profile"
+            >answering questions</a
+          >
+          and
+          <a rel="noopener noreferrer" target="_blank" class="underline text-link" href="https://github.com/shekohex"
+            >writing code</a
+          >.
+        </h3>
+        <h3 class="font-body font-medium text-tertiary">
+          For more information about me you can take a look at
+          <a
+            rel="noopener noreferrer"
+            target="_blank"
+            class="underline text-link"
+            href="https://drive.proton.me/urls/RZ3256EQKM#5JCMFE25YUC8"
+            >my résumé</a
+          >.
+        </h3>
+        <h3 class="font-body font-light text-tertiary italic">
+          You can almost find me anywhere on internet by <code>shekohex</code> as a username/handle.
+        </h3>
+      </div>
+      <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
+        <a
+          href="mailto:hey@shadykhalifa.me"
+          rel="noopener noreferrer"
+          target="_blank"
+          class="bg-secondary shadow-lg font-body font-medium text-tertiary pt-6 pb-6 pr-8 pl-8 rounded-full"
+        >
+          Email Me :)
+        </a>
+      </div>
+      <!--
       <div class="lg:h-40 md:h-32 sm:h-24 h-auto md:w-auto sm:w-4/5 lg:mx-0 md:m-5 sm:m-10 m-6">
         <small class="text-xs font-light font-body italic opacity-75 text-tertiary"
           >Pssst.. I’m available for hire :)</small
         >
       </div>
       -->
-  </div>
-</body>
-
+    </div>
+  </body>
 </html>
