Mastodon Website verification

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <meta name="application-name" content="Shady Khalifa" />
     <meta name=msapplication-config content=/static/favicons/browserconfig.xml>
     <meta name="theme-color" content="#222831" />
+    <meta name="fediverse:creator" content="@shekohex@techhub.social">
+    <link rel="me" href="https://techhub.social/@shekohex"/>
     <title>About | Shady Khalifa</title>
     <link rel="stylesheet" href="/static/css/style.css" />
   </head>
